--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap-sass": "^3.3.7",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "popper.js": "^1.14.7",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "font-awesome": "^4.7.0",
+        "js-cookie": "^2.2.0",
+        "localforage": "^1.7.3",
+        "sass-resources-loader": "^2.0.0",
+        "vue-router": "^3.0.2",
+        "vuex": "^3.1.0",
+        "vuex-persistedstate": "^2.5.4"
     }
 }
