--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "font-awesome": "^4.7.0",
         "js-cookie": "^2.2.0",
         "localforage": "^1.7.3",
+        "moment": "^2.24.0",
         "sass-resources-loader": "^2.0.0",
         "vue-router": "^3.0.2",
+        "vuejs-datepicker": "^1.5.4",
         "vuex": "^3.1.0",
         "vuex-persistedstate": "^2.5.4"
     }
