--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/dashboard-index-bundle.js": "/dashboard-index-bundle.js",
+    "/dashboard-programme-bundle.js": "/dashboard-programme-bundle.js",
     "/layouts-bundle.js": "/layouts-bundle.js",
     "/dashboard-bundle.js": "/dashboard-bundle.js",
     "/login-bundle.js": "/login-bundle.js",
