--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.14.7",
-        "vue": "^2.5.7"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
