update functionality for loading login page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/layouts-bundle.js": "/js/layouts-bundle.js",
-    "/js/register-bundle.js": "/js/register-bundle.js",
-    "/js/login-bundle.js": "/js/login-bundle.js",
-    "/js/forgotPassword-bundle.js": "/js/forgotPassword-bundle.js",
-    "/js/dashboard-programme-bundle.js": "/js/dashboard-programme-bundle.js",
-    "/js/dashboard-index-bundle.js": "/js/dashboard-index-bundle.js",
-    "/js/dashboard-bundle.js": "/js/dashboard-bundle.js"
+    "/css/app.css": "/css/app.css"
 }
