--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "localforage": "^1.7.3",
         "moment": "^2.24.0",
         "sass-resources-loader": "^2.0.0",
+        "vee-validate": "^2.2.0",
         "vue-router": "^3.0.2",
         "vuejs-datepicker": "^1.5.4",
         "vuex": "^3.1.0",
